feat : modules setting